--- a/MyTodoApp/src/app/todolist/todolist.component.html
+++ b/MyTodoApp/src/app/todolist/todolist.component.html
@@ -1,38 +1,32 @@
-<style>
-  /* Typ Selector */
-  div h3 {
-    background-color: white;
-  }
-
-  /* Classen Selector */
-  .myClass {
-    background-color: green;
-  }
-
-  /* ID Selector */
-  #myId {
-    background-color: lightblue;
-  }
-
-  input{
-    margin-right: 5px;
-  }
-</style>
-
 <!-- EMMET -->
-<!-- div>h3{Neue Todo:}+input[name="todotext"]+button{OK} -->
-<div>
-  <h3>Neue Todo:</h3>
-  <input type="text" name="todotext"><button>OK</button>
+<!-- div>h3{Neue Todo:}+input[ngModel="todoText"]+button{OK} -->
+<div *ngIf="!isEditMode">
+  <div>
+    <h3>Neue Todo:</h3>
+    <input type="text" [(ngModel)]="todoText"><button (click)="addTodo()">OK</button>
+  </div>
+  <!-- div>h3{Todo hinzufügen:}+input:checkbox[name="todowaehlen"]-->
+  <div *ngIf="!isEditMode">
+    <label class="checkbox">
+      <input type="checkbox" [(ngModel)]="allowAddTodo">
+      Todo hinzufügen
+    </label>
+  </div>
 </div>
-<!-- div>h3{Todo aktivieren:}+input:checkbox[name="todowaehlen"]+button{OK}
-<div>
-  <h3>Todo aktivieren:</h3>
-  <input type="checkbox" name="todowaehlen" id=""><button>OK</button>
-</div> -->
-<!-- ul#listbox>li*3#listitem$>lorem5+{$} -->
-<ul id="listbox">
-  <li id="listitem1">Lorem ipsum dolor sit amet.1</li>
-  <li id="listitem2">Voluptates aut aliquid voluptate ut.2</li>
-  <li id="listitem3">Omnis adipisci aliquid maiores quos.3</li>
+
+<div *ngIf="isEditMode">
+  <h3>Todo bearbeiten:</h3>
+  <input type="text" [(ngModel)]="todoText"><button (click)="updateTodo()">OK</button>
+</div>
+
+<h3>Todos ({{todos.length}})</h3>
+<ul>
+  <li *ngFor="let todo of todos; let i = index" [ngClass]="{'selectItem': todoUpdateIndex === i}">
+    <span (click)="editTodo(i)">{{ todo }}</span>
+    <button (click)="removeTodo(i)">X</button>
+  </li>
 </ul>
+
+<div>
+  <button (click)="clearTodos()">Todoliste löschen</button>
+</div>
