Hinzufügen von Texten und Editierung mittels Enter

--- a/MyTodoApp/src/app/todolist/todolist.component.css
+++ b/MyTodoApp/src/app/todolist/todolist.component.css
@@ -23,14 +23,11 @@
 
  span {
    margin-right: 5px;
+   height: 12px;
  }
 
  li {
-   width: 200px;
- }
-
- li>button {
-   float: right;
+   align-content: center;
  }
 
  li:nth-child(odd) {
