--- a/MyTodoApp/src/app/todolist/todolist.component.html
+++ b/MyTodoApp/src/app/todolist/todolist.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="!isEditMode">
   <div>
     <h3>Neue Todo:</h3>
-    <input type="text" [(ngModel)]="todoText"><button (click)="addTodo()">OK</button>
+    <input type="text" id="inputTextBox" [(ngModel)]="todoText" (keyup.enter)="addTodo()"><button (click)="addTodo()">OK</button>
   </div>
   <!-- div>h3{Todo hinzufügen:}+input:checkbox[name="todowaehlen"]-->
   <div *ngIf="!isEditMode">
@@ -16,7 +16,7 @@
 
 <div *ngIf="isEditMode">
   <h3>Todo bearbeiten:</h3>
-  <input type="text" [(ngModel)]="todoText"><button (click)="updateTodo()">OK</button>
+  <input type="text" [(ngModel)]="todoText" (keyup.enter)="updateTodo()"><button (click)="updateTodo()">OK</button>
 </div>
 
 <h3>Todos ({{todos.length}})</h3>
