Neue Directive für focus erhalten und focus verlieren

--- a/MyTodoApp2/src/app/todolist/todolist.component.html
+++ b/MyTodoApp2/src/app/todolist/todolist.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="!isEditMode">
   <h3>Neues Todo:</h3>
-  <input type="text" [(ngModel)]="todoText" (keyup.enter)="addTodo()">
+  <input appAutoInputWidth type="text" [(ngModel)]="todoText" (keyup.enter)="addTodo()">
   <button (click)="addTodo()">OK</button>
 </div>
 <div *ngIf="isEditMode">
