--- a/MyTodoApp2/src/app/todolist/todolist.component.html
+++ b/MyTodoApp2/src/app/todolist/todolist.component.html
@@ -12,7 +12,7 @@
 <h3 *ngIf="todos.length>0">Todos ({{todos.length}})</h3>
 <ul>
   <li *ngFor="let todo of todos; let i = index" [ngClass]="{'hightlightli':this.indexTodoUpdate===i}">
-    <span (click)="editTodo(i)">{{i+1}}. {{todo}}</span>
+    <span (click)="editTodo(i)">{{i+1}}. {{todo | myuppercase}}</span>
     <button (click)="removeTodo(i)" id="buttonDelete">
       <img src="http://chittagongit.com//images/delete-icon-png-16x16/delete-icon-png-16x16-29.jpg" width="16" height="16">
     </button>
