--- a/MyTodoApp2/src/app/app.component.html
+++ b/MyTodoApp2/src/app/app.component.html
@@ -1,3 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <h1> {{ title }} </h1>
-<app-todolist></app-todolist>
+<!-- <app-todolist></app-todolist> -->
+<a routerLink="/" routerLinkActive="clicked" [routerLinkActiveOptions]="{ exact: true}">Home</a> || <a routerLink="/about"
+    routerLinkActive="clicked">About</a>
+<router-outlet></router-outlet>
